categoty group: documentation with swagger
